# PA2-semestral-project

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  lines-of-code.sh  prohlaseni.txt  zadani.txt
src/: Constants.hpp  ExpoImpo.h  Game.cpp  Game.h  Game.hpp  main.cpp
src/Database/: DataHandler.cpp  DataHandler.hpp  Exporter.cpp  Exporter.hpp  Importer.cpp  Importer.hpp
src/Game/: Game.cpp  Game.hpp  Page.cpp  Page.h  Page.hpp  Quiz.cpp  Quiz.h  Quiz.hpp
src/Game/Question/: MultiChoiceQuestion.cpp  MultiChoiceQuestion.h  MultiChoiceQuestion.hpp  Question.cpp  Question.h  Question.hpp  TextQuestion.cpp  TextQuestion.h  TextQuestion.hpp  TrueFalseQuestion.cpp  TrueFalseQuestion.h  TrueFalseQuestion.hpp
src/IO/: DataHandler.cpp  DataHandler.hpp  ExpoImpo.cpp  ExpoImpo.hpp  Exporter.cpp  Exporter.hpp  Importer.cpp  Importer.hpp
src/UI/: AdderScreen.cpp  AdderScreen.hpp  CreatorScreen.cpp  CreatorScreen.hpp  ExitScreen.cpp  ExitScreen.hpp  GameScreen.cpp  GameScreen.hpp  MainMenu.cpp  MainMenu.hpp  MainMenuScreen.cpp  MainMenuScreen.hpp  Menu.cpp  Menu.h  Screen.cpp  Screen.hpp
